--- a/FrontEnd/contributer.html
+++ b/FrontEnd/contributer.html
@@ -82,13 +82,12 @@
 
         var oneDay = 24 * 3600 * 1000;
         var date = [];
-
         var data = [];
         
 
         function addData(shift) {
             var now = new Date();
-            now = [now.getMonth(),now.getDate(),now.getHours(), now.getMinutes()].join('-');
+            now = [now.getMonth()+1,now.getDate(),now.getHours(), now.getMinutes()].join('-');
             $.get( "http://localhost:8000", function( data ) {
                 flowdata = data;
             });
@@ -100,28 +99,33 @@
                 data.shift();
             }
         }
-
+        //从历史数据获取🚀数量
         function initChart(){
-            $.get("http://localhost:7000",function(data){
-                initdata =data;
+            $.get("http://localhost:7000",function(transdata){
+                initdata =transdata;
                 initdata = JSON.parse(initdata);
-                for(k in initdata){
-                    flowchart.setOption({
-                        xAxis: {
-                            data: k
-                        },
-                        series: [{
-                            name:'弹幕量',
-                            data: initdata[k]
-                        }]
-                    });
+                array =[]
+                for(a in initdata){
+                 array.push([a,initdata[a]])
                 }
+                array.sort(function(a,b){return a[1] - b[1]});
+                convert = array;
+                for (var i = 0; i < array.length; i++) {
+                    array[i]
+                    date.push(array[i][0]);
+                    data.push(array[i][1]);
+                }
+                flowchart.setOption({
+                    xAxis: {
+                        data: date
+                    },
+                    series: [{
+                        name:'弹幕量',
+                        data: data
+                    }]
+                });
 
             });
-        }
-
-        for (var i = 1; i < 100; i++) {
-            addData();
         }
 
         flowoption = {
@@ -174,7 +178,7 @@
                     {
                         type: 'slider',
                         yAxisIndex: 0,
-                        start: 99.997,
+                        start: 50,
                         end: 100
                     }
                 ]    
@@ -183,7 +187,7 @@
         };
         initChart()
         app.timeTicket = setInterval(function () {
-            addData(true);
+            addData(false);
             flowchart.setOption({
                 xAxis: {
                     data: date
