--- a/FrontEnd/contributer.html
+++ b/FrontEnd/contributer.html
@@ -20,7 +20,7 @@
         
 
         function addData() {
-            $.get( "http://localhost:8888", function( data ) {
+            $.get( "http://123.206.211.77:8888", function( data ) {
                 jsondata = JSON.parse(data)
                 for (k in jsondata){
                     key.push(k);
@@ -88,7 +88,7 @@
         function addData(shift) {
             var now = new Date();
             now = [now.getMonth()+1,now.getDate(),now.getHours(), now.getMinutes()].join('-');
-            $.get( "http://localhost:8000", function( data ) {
+            $.get( "http://123.206.211.77:8000", function( data ) {
                 flowdata = data;
             });
             flowdata =parseInt(flowdata)
@@ -101,7 +101,7 @@
         }
         //从历史数据获取🚀数量
         function initChart(){
-            $.get("http://localhost:7000",function(transdata){
+            $.get("http://123.206.211.77:7000",function(transdata){
                 initdata =transdata;
                 initdata = JSON.parse(initdata);
                 array =[]
