--- a/FrontEnd/contributer.html
+++ b/FrontEnd/contributer.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" http-equiv="Access-Control-Allow-Origin" content="*.json">
 	<script src="echarts.min.js" type="text/javascript"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js" type="text/javascript"></script>
 </head>
 <body>
 	<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
